--- a/_config.yml
+++ b/_config.yml
@@ -10,14 +10,14 @@ url: "https://angry-babbage-06895e.netlify.app/" # The base hostname & protocol 
 #-------------------------------
 # Author Settings
 author:
-  name: Brandon Watson
+  name: Dualeone
   avatar: '/images/15.jpg'
 
 
 #-------------------------------
 # Hero Settings
 hero:
-  title: Aditu
+  title: Dualeone
   description: Thoughts, stories and ideas.
   image: '/images/01.jpg'
 
@@ -25,7 +25,7 @@ hero:
 #-------------------------------
 # Contact Settings
 contact:
-  email: your@email.com # Add your email for contant form
+  email: dualeone@gmail.com # Add your email for contant form
   description: The Force is strong with this one. I have you now. I find your lack of faith disturbing. Hey, Luke! May the Force be with you. She must have hidden the plans in the escape pod. Send a detachment down to retrieve them, and see to it personally, Commander. There’ll be no one to stop us this time! # Add a description of your form
 
 # NOTE
@@ -47,7 +47,7 @@ social:
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: mr-brown # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: Dualeone # Add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
