--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 #-------------------------------
 # General Site Settings
-title: Aditu
+title: Dualeone
 logo: # You can add own logo. For example '/images/logo.png'.
-description: Aditu is a stylish and modern dark theme with a clean and unique design.
+description:
 baseurl: "" # The subpath of your site, e.g. /blog
 url: "https://angry-babbage-06895e.netlify.app/" # The base hostname & protocol for your site, e.g. http://example.com
 
