--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ social:
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: Dualeone # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: acctesthoima@gmail.com # Add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
