--- a/_config.yml
+++ b/_config.yml
@@ -37,17 +37,18 @@ contact:
 # Example of adding a new link to the footer - {icon: "ion-logo-github", link: "https://github.com"}
 # Other icons can be found at https://ionicons.com
 social:
-- {icon: "ion-logo-twitter", link: "https://twitter.com"}
 - {icon: "ion-logo-facebook", link: "https://facebook.com"}
-- {icon: "ion-logo-dribbble", link: "https://dribbble.com"}
-- {icon: "ion-logo-instagram", link: "https://instagram.com"}
-- {icon: "ion-logo-pinterest", link: "https://pinterest.com"}
-- {icon: "ion-logo-github", link: "https://github.com"}
+- {icon: "ion-logo-github", link: "https://github.com/dualeone"}
+#- {icon: "ion-logo-twitter", link: "https://twitter.com"}
+#- {icon: "ion-logo-dribbble", link: "https://dribbble.com"}
+#- {icon: "ion-logo-instagram", link: "https://instagram.com"}
+#- {icon: "ion-logo-pinterest", link: "https://pinterest.com"}
+
 
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: acctesthoima@gmail.com # Add your shortname for Disqus Comment. For example mr-brown
+#disqus-identifier: acctesthoima@gmail.com # Add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
