--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
 hero:
   title: Dualeone
   description: Thoughts, stories and ideas.
-  image: '/images/01.jpg'
+  image: '/images/avatar.jpg'
 
 
 #-------------------------------
