--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "https://angry-babbage-06895e.netlify.app/" # The base hostname & protocol 
 # Author Settings
 author:
   name: Dualeone
-  avatar: '/images/15.jpg'
+  avatar: '/images/avatar.jpg'
 
 
 #-------------------------------
