--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Dualeone
 logo: # You can add own logo. For example '/images/logo.png'.
 description:
 baseurl: "" # The subpath of your site, e.g. /blog
-url: "https://angry-babbage-06895e.netlify.app/" # The base hostname & protocol for your site, e.g. http://example.com
+url: "https://dualeone.com/" # The base hostname & protocol for your site, e.g. http://example.com
 
 
 #-------------------------------
