--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ hero:
 # Contact Settings
 contact:
   email: dualeone@gmail.com # Add your email for contant form
-  description: The Force is strong with this one. I have you now. I find your lack of faith disturbing. Hey, Luke! May the Force be with you. She must have hidden the plans in the escape pod. Send a detachment down to retrieve them, and see to it personally, Commander. There’ll be no one to stop us this time! # Add a description of your form
+  description: The Force is strong with this one. I have you now. I find your lack of faith disturbing. Hey folk! May the Force be with you. She must have hidden the plans in the escape pod. Send a detachment down to retrieve them, and see to it personally, Commander. There’ll be no one to stop us this time! # Add a description of your form
 
 # NOTE
 # Aditu theme comes with a contact form built-in. You can use this form with Formspree service and get up to 50 submissions for free. Also, you can easily switch to another service if you want.
@@ -37,7 +37,7 @@ contact:
 # Example of adding a new link to the footer - {icon: "ion-logo-github", link: "https://github.com"}
 # Other icons can be found at https://ionicons.com
 social:
-- {icon: "ion-logo-facebook", link: "https://facebook.com"}
+- {icon: "ion-logo-facebook", link: "https://facebook.com/groups/lonlennao"}
 - {icon: "ion-logo-github", link: "https://github.com/dualeone"}
 #- {icon: "ion-logo-twitter", link: "https://twitter.com"}
 #- {icon: "ion-logo-dribbble", link: "https://dribbble.com"}
